--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,7 +20,7 @@
 /* Colors */
 :root {
   --color-default: #2b180d;
-  --color-primary: #56b8e6;
+  --color-primary: #db0e0e;
   --color-secondary: #1b2f45;
 }
 
