--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -21,7 +21,7 @@
 :root {
   --color-default: #2b180d;
   --color-primary: #db0e0e;
-  --color-secondary: #1b2f45;
+  --color-secondary: #2a1b45;
 }
 
 /* Smooth scroll behavior */
@@ -2116,6 +2116,10 @@ section {
   color: #29486a;
   position: relative;
   padding-bottom: 12px;
+  justify-content: center;
+}
+.footer1  {
+  justify-content: center;
 }
 
 .footer .footer-content .footer-links {
@@ -2150,6 +2154,7 @@ section {
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
+  
 }
 
 .footer .footer-content .footer-links ul a:hover {
@@ -2159,6 +2164,7 @@ section {
 .footer .footer-content .footer-contact p {
   line-height: 26px;
   color: var(--color-secondary);
+
 }
 
 .footer .footer-legal {
