--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -508,7 +508,8 @@ section {
     position: absolute;
     content: "";
     width: 45%;
-    background: white;
+    /* background: white; */
+    background: rgba(241, 241, 241, 0.6);
     top: 0;
     bottom: 0;
   }
@@ -517,7 +518,7 @@ section {
 .hero:before {
   position: absolute;
   content: "";
-  background: rgba(27, 47, 69, 0.6);
+  /* background: rgba(156, 156, 156, 0.6); */
   inset: 0;
 }
 
@@ -551,7 +552,7 @@ section {
   padding-left: 20px;
   font-size: 30px;
   font-family: var(--font-default);
-  border-left: 2px solid var(--color-primary);
+  border-left: 2px solid #CC1420;
   margin: 40px 0;
 }
 
@@ -612,7 +613,7 @@ section {
 # Why Choose Us Section
 --------------------------------------------------------------*/
 .why-us {
-  padding-bottom: 0;
+  padding-bottom: 2rm;
 }
 
 .why-us .img-bg {
