--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -71,7 +71,7 @@ section {
 }
 
 .section-header h2 {
-  font-size: 2em;
+  font-size: 1.6em;
   font-weight: 600;
   margin-bottom: 20px;
   padding-bottom: 20px;
@@ -1091,11 +1091,11 @@ section {
 --------------------------------------------------------------*/
 .testimonials .testimonial-item {
   box-sizing: content-box;
-  padding: 30px;
+  padding: 10px;
   margin: 40px 30px;
   box-shadow: 0px 0 20px rgba(27, 47, 69, 0.1);
   background: #fff;
-  min-height: 320px;
+  min-height: 30px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -1112,7 +1112,7 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
+  width: 180px;
   border-radius: 50%;
   border: 4px solid #fff;
   margin: 0 auto;
@@ -1144,7 +1144,7 @@ section {
 .testimonials .swiper-pagination .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
-  background-color: #e8eff6;
+  background-color: #a5abb1;
   opacity: 1;
 }
 
