--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -708,6 +708,7 @@ section {
   margin: 30px 0;
   color: #29486a;
   font-size: 1em;
+  font-weight: 600;
 }
 
 .about .content ul {
@@ -719,7 +720,7 @@ section {
   padding: 0 0 15px 26px;
   position: relative;
   font-size: 15px;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .about .content ul i {
@@ -749,7 +750,7 @@ section {
   margin-bottom: 5px;
   font-size: 18px;
   color: #f51313;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .services-list .service-item .title a {
