--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1095,7 +1095,7 @@ section {
   margin: 40px 30px;
   box-shadow: 0px 0 20px rgba(27, 47, 69, 0.1);
   background: #fff;
-  min-height: 30px;
+  /* min-height: 30px; */
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -1113,9 +1113,10 @@ section {
 
 .testimonials .testimonial-item .testimonial-img {
   width: 180px;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  margin: 0 auto;
+  /* border-radius: 50%; */
+  border: 0.01px solid #0a0a0a;
+  margin: auto;
+  border: 50%;
 }
 
 .testimonials .testimonial-item h3 {
@@ -2159,7 +2160,7 @@ section {
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
-  
+
 }
 
 .footer .footer-content .footer-links ul a:hover {
