--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,7 +47,7 @@
   font-weight: 500;
 }
 .form-outer form .page .field{
-  width: 330px;
+  width: 100%;
   height: 45px;
   margin: 45px 0;
   display: flex;
@@ -181,4 +181,9 @@ form .page .btns button.next{
 .progress-bar .step .check.active{
   display: block;
   color: #fff;
+}
+
+.containerform .form-outer .rowFormulario {
+  justify-content: center;
+  align-items: baseline
 }
