--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -499,7 +499,7 @@ section {
 .hero {
   width: 100%;
   min-height: 100vh;
-  background: url("../img/CRAC-Inicio.jpeg") top center;
+  background: url("../img/CRA-Inicio.png") top center;
   background-size: cover;
   position: relative;
   padding: 120px 0;
