--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -101,10 +101,16 @@ form .page .btns button.next{
   margin-left: 3px;
 }
 .containerform .progress-bar{
-  display: flex;
+  display: grid;
   flex-direction: row;
   margin: 40px 0;
   user-select: none;
+  grid-template-columns: repeat(
+    auto-fit, minmax(
+      150px, 
+      1fr
+    )
+  );
 }
 .containerform .progress-bar .step{
   text-align: center;
